# ChangeLog for sys-devel/m4
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-devel/m4/ChangeLog,v 1.126 2009/04/01 15:56:38 vapier Exp $

*m4-1.4.13 (01 Apr 2009)

  01 Apr 2009; Mike Frysinger <vapier@gentoo.org> +m4-1.4.13.ebuild:
  Version bump.

  17 Mar 2009; Raúl Porcel <armin76@gentoo.org> m4-1.4.12.ebuild:
  m68k stable wrt #258525, thanks to kolla for testing

  24 Feb 2009; Thomas Anderson <gentoofan23@gentoo.org> m4-1.4.12.ebuild:
  stable amd64, bug 258525

  14 Feb 2009; Raúl Porcel <armin76@gentoo.org> m4-1.4.12.ebuild:
  arm/ia64/s390/sh/x86 stable wrt #258525

  12 Feb 2009; Brent Baude <ranger@gentoo.org> m4-1.4.12.ebuild:
  Marking m4-1.4.12 ppc64 for bug 258525

  12 Feb 2009; nixnut <nixnut@gentoo.org> m4-1.4.12.ebuild:
  ppc stable #258525

  12 Feb 2009; Ferris McCormick <fmccor@gentoo.org> m4-1.4.12.ebuild:
  Sparc stable, Bug #258525.

  12 Feb 2009; Jeroen Roovers <jer@gentoo.org> m4-1.4.12.ebuild:
  Stable for HPPA (bug #258525).

  11 Feb 2009; Tobias Klausmann <klausman@gentoo.org> m4-1.4.12.ebuild:
  Stable on alpha, bug #258525

  11 Feb 2009; Mike Frysinger <vapier@gentoo.org> m4-1.4.12.ebuild:
  Drop unused USE=nls #253600 by Arfrever Frehtes Taifersar Arahesis.

*m4-1.4.12 (25 Oct 2008)

  25 Oct 2008; Mike Frysinger <vapier@gentoo.org> +m4-1.4.12.ebuild:
  Version bump.

  13 Apr 2008; Jeroen Roovers <jer@gentoo.org> m4-1.4.11.ebuild:
  Stable for HPPA (bug #217229).

  12 Apr 2008; Tobias Scherbaum <dertobi123@gentoo.org> m4-1.4.11.ebuild:
  ppc stable, bug #217229

  11 Apr 2008; Markus Rothe <corsair@gentoo.org> m4-1.4.11.ebuild:
  Stable on ppc64; bug #217229

  11 Apr 2008; Santiago M. Mola <coldwind@gentoo.org> m4-1.4.11.ebuild:
  amd64 stable wrt security bug #217229

  11 Apr 2008; Raúl Porcel <armin76@gentoo.org> m4-1.4.11.ebuild:
  alpha/ia64/sparc/x86 stable wrt security #217229

*m4-1.4.10-r3 (07 Apr 2008)
