@@ -5,7 +5,9 @@ AUX m4-1.4.13-interix.patch 429 RMD160 eba140e72c280c1ee9605dcb105939acc3fbb9a5 
 AUX m4-1.4.8-darwin7.patch 1162 RMD160 526caafe9cd64238b27405282f00d6744ccff0e8 SHA1 3872059b7301e8e0e668457aab7d5929712dbbd9 SHA256 c4a39f4139113a41fe11a0a0d856285aeb42f52297191a22c683ca7d32682cb9
 DIST m4-1.4.12.tar.lzma 768167 RMD160 0a510ac65fb0a0005a574b6d1dcf4a86718fd7af SHA1 ea93f11df1098e1ced67255c7a66b817bd29daef SHA256 a5caedee843ad8fc418fb5228da057156134ca4132eb850d1e9a3d7838477f46
 DIST m4-1.4.13.tar.bz2 1008418 RMD160 36d624b8a0f27bbf239bb92548d812d879c1039a SHA1 7ba1834ebf96d0520d526c1c9f5764cc869a9f42 SHA256 fcc6fe95e31476dae0fe17a941603c9876cffd0172c8985787388b99a5caec06
+DIST m4-1.4.14.tar.bz2 1125670 RMD160 d4145f84b629772d9e5bd8fd893f3633d26071a9 SHA1 f2df9a3db6bb3974f06e5cefe04b9ce3f4bf8b82 SHA256 0885ffa93256353a96b1cf0bcbc4d639ed09953b687e6cc412c4048e656f4dd2
 EBUILD m4-1.4.12.ebuild 1539 RMD160 23f35f704f88113530ef72b8297c23b6dd091849 SHA1 20af1ff5ff48367aafd49f3518a6580469b1045a SHA256 605685b01b37f77e81919ede45c273e78e1e4c9ebd714e7ca35d150949cc5fa2
 EBUILD m4-1.4.13.ebuild 1621 RMD160 cdad39b6acb39cfc787811af3c8aa6db74bc59b7 SHA1 09546287deeab00972b732eaed14ca58a8176d1f SHA256 093255aca82c3080876763d908e3d8107c27eaad45ced805d56c2af81716341b
-MISC ChangeLog 14023 RMD160 948568f8c28280dcfbc6726e6e0ff774c56b1512 SHA1 a94b14d45198fd2591a8368bdbe196fc6ba07a21 SHA256 e6cf98017d21175c7b14664fd1f46f81c8a1fd423417998761769080b5fab5d3
+EBUILD m4-1.4.14.ebuild 1629 RMD160 6cb9090744e8f53db0c7974eabd67eb2f135a2ae SHA1 07181dea230d3d1d0810cc6ffdf0c72884580d00 SHA256 15045e600fd5e08b9d30338024fb7f8b203f71884c553f7be86a099f12df5deb
+MISC ChangeLog 14161 RMD160 a10cff53e26b3c194e413d24d7e2b68e1067737b SHA1 7489acb730738dd48df4b5317858ed79cdeaa00e SHA256 446f1ca06e08c332ad89c76a322dc376192d9ec5a758a9c79dc24bcf9874771c
 MISC metadata.xml 164 RMD160 f43cbec30b7074319087c9acffdb9354b17b0db3 SHA1 9c213f5803676c56439df3716be07d6692588856 SHA256 f5f2891f2a4791cd31350bb2bb572131ad7235cd0eeb124c9912c187ac10ce92
