@@ -1,6 +1,11 @@
 # ChangeLog for sys-devel/m4
-# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-devel/m4/ChangeLog,v 1.126 2009/04/01 15:56:38 vapier Exp $
+# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/sys-devel/m4/ChangeLog,v 1.127 2010/03/05 19:00:52 vapier Exp $
+
+*m4-1.4.14 (05 Mar 2010)
+
+  05 Mar 2010; Mike Frysinger <vapier@gentoo.org> +m4-1.4.14.ebuild:
+  Version bump #307633 by Jeroen Roovers.
 
 *m4-1.4.13 (01 Apr 2009)
 
